tests/custom/STARIS_2022/operation-type-errors/party-type-error-02/stderr.expected
Error:
    party-type-error.essence:2:24:
  |
2 | such that b = party(5, 6) 
  |                        ^
Type error:
	Expected: partition from int
	Got: int

cat: *.solution: No such file or directory
